--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,25 @@
+
 <% layout("/layouts/boilerplate") %>
+
 <div class="row">
     <div class="col-8 offset-2">
         <h3><b><%= selectedList.title %></b></h3>
+        <br>
     </div>
     <div class="card col-6 offset-2 show-card listing-card">
         <img class="card-img-top show-img" src="<%= selectedList.img %>" alt="Card image cap">
         <div class="card-body">
           <p class="card-text"><br>
+                <i><b><%= selectedList.owner.username %></b></i>
+            <br>
+            <br>
             <%= selectedList.description %><br>
             &#8377 <%= selectedList.price.toLocaleString("en-IN") %><br>
             <%= selectedList.country %><br>
             <%= selectedList.location %>
 
         </p>
+        <% if(currentUser && currentUser._id.equals(selectedList.owner._id)){ %>
         <div class="btns">
             <form method="get" action="/listings/<%= selectedList.id %>/edit">
                 <button class="btn btn-dark edit-btn ">Edit</button>
@@ -23,6 +30,7 @@
             </form> 
              
         </div>
+        <% } %>
         <hr>
         <h4>All reviews</h4>
 
