--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="row mt-3">
     <div class="col-6 offset-3">
-        <form method = "post" action="/signup" novalidate class="needs-validation">
+        <form method = "post" action="/login" novalidate class="needs-validation">
             <h1>LogIn on WanderLust</h1>
             <div class="mb-4 ">
                 <label for="username" class="form-label">Username</label>
@@ -34,7 +34,7 @@
                 required >
             </div>         
 
-            <button class="btn btn-success">SignUp</button>
+            <button class="btn btn-success">login</button>
 
         </form>
     </div>
