--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
         <h3><b><%= selectedList.title %></b></h3>
         <br>
     </div>
-    <div class="card col-6 offset-2 show-card listing-card">
+    <div class="card col-8 offset-2 show-card listing-card">
         <img class="card-img-top show-img" src="<%= selectedList.img %>" alt="Card image cap">
         <div class="card-body">
           <p class="card-text"><br>
@@ -20,72 +20,122 @@
 
         </p>
         <% if(currentUser && currentUser._id.equals(selectedList.owner._id)){ %>
-        <div class="btns">
-            <form method="get" action="/listings/<%= selectedList.id %>/edit">
-                <button class="btn btn-dark edit-btn ">Edit</button>
-            </form>
+            <div class="btns">
+                <form method="get" action="/listings/<%= selectedList.id %>/edit">
+                    <button class="btn btn-dark edit-btn ">Edit</button>
+                </form>
 
-            <form method="post" action="/listings/<%= selectedList.id %>/remove?_method=DELETE">
-                <button class="btn btn-dark">Delete</button>
-            </form> 
-             
-        </div>
+                <form method="post" action="/listings/<%= selectedList.id %>?_method=DELETE">
+                    <button class="btn btn-dark">Delete</button>
+                </form> 
+                
+            </div>
         <% } %> 
-        <hr>
-        <h4>All reviews</h4>
-
-        <div class="row">
+        </div> 
+    <hr>
+    </div>
+         
+    <div class="row offset-2 col-8">
+        
+        <h4 class="mb-3">All reviews</h4>
         <% for(let review of selectedList.reviews){ %>
-            <div class="card col-5 ms-3 mb-3 ">
+            <div class="card review-card col-5 ms-2 mb-3 ">
                 <div class="card-body">
                     <h5 class="card-title">@<%=review.author.username%></h5>
+                    <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                     <p class="card-text"><%= review.comment %></p>
-                    <p class="card-text"><%= review.rating %></p>
+                    
                 </div>
 
                 <% if(currentUser && currentUser._id.equals(review.author._id)){ %>
 
-
                     <form class="mb-3 mt-3" method="POST" action="/listings/<%=selectedList.id %>/review/<%= review.id %>?_method=DELETE">
 
-
-                    <button class="btn btn-dark">DELETE</button>
+                        <button class="btn btn-dark">DELETE</button>
                     
-                </form>
+                    </form>
                 <% } %>
-
-
-            </div>
-           
-            <% } %>    
-        </div>
-        <h4>Average rating</h4>
-
+            </div>   
+        <% } %>    
         <hr>
+        
         <% if(currentUser){ %>
         <div>
             <h4>Leave a review</h4>
             <form class="mb-3 mt-3" method="post" action="/listings/<%= selectedList.id %>/review" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
                     <label for="rating" class="form-label">Rating</label>
-                    <input id="rating" step="1"  name="review[rating]" type="range" min="1" max="5">
+                    <fieldset class="starability-slot">
+                        <input 
+                        type="radio"
+                        id="no-rate"
+                        class="input-no-rate" 
+                        name="review[rating]" 
+                        value="1" 
+                        aria-label="No rating."
+                        checked />
+
+                        <input 
+                        type="radio"
+                        id="first-rate1" 
+                        name="review[rating]"
+                        value="1" />
+
+                        <label for="first-rate1" title="Terrible">1 star</label>
+
+                        <input 
+                        type="radio"
+                        id="first-rate2" 
+                        name="review[rating]"
+                        value="2" />
+
+                        <label for="first-rate2" title="Not good">2 stars</label>
+
+                        <input 
+                        type="radio"
+                        id="first-rate3" 
+                        name="review[rating]"
+                        value="3" />
+
+                        <label for="first-rate3" title="Average">3 stars</label>
+
+                        <input 
+                        type="radio"
+                        id="first-rate4" 
+                        name="review[rating]"
+                        value="4" />
+
+                        <label for="first-rate4" title="Very good">4 stars</label
+                        >
+                        <input 
+                        type="radio"
+                        id="first-rate5" 
+                        name="review[rating]"
+                        value="5" />
+
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+
+                    </fieldset>
                 </div>
 
-                <div class="mb-3 mt-3">
+                <div style="margin-top: -2px !important;">
                     <label for="comment" class="form-label">Comment:</label>
                     <textarea id="comment" class="form-control" placeholder="How was your experience?" name="review[comment]" cols="20" rows="5"   required></textarea>
                 </div>
 
-                <div class="invalid-feedback">Please add come comments for review</div>
+                <div class="invalid-feedback">
+                    Please add come comments for review
+                </div>
 
                 <br>
+
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
         </div>
         <% } %>
     </div>
 </div>
-</div>
+
 
 
 
