--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
         <br>
     </div>
     <div class="card col-8 offset-2 show-card listing-card">
-        <img class="card-img-top show-img" src="<%= selectedList.img %>" alt="Card image cap">
+        <img class="card-img-top show-img" src="<%= selectedList.img.url %>" alt="Card image cap">
         <div class="card-body">
           <p class="card-text"><br>
                 <i><b><%= selectedList.owner.username %></b></i>
