--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
     <% for(let listing of printinglistings){ %>
         <a href="listings/<%= listing.id %>" class="show-image">
              <div class="card col" >
-                    <img src="<%= listing.img %>" class="card-img-top" alt="..." style="height: 20rem;">
+                    <img src="<%= listing.img.url %>" class="card-img-top" alt="..." style="height: 20rem;">
                 <div class="card-img-overlay"> </div>
                     <div class="card-body">
                         <p class="card-text"><%= listing.title %> <br>
