--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -62,11 +62,11 @@
 
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="/listings/new">wanderlust home</a>
-          <% if(!currentUser){ %>
+          <% if(!res.locals.currentUser){ %>
           <a class="nav-link" aria-current="page" href="/signup"><b>Signup</b></a>
           <a class="nav-link" href="/login"><b>Login</b></a>
           <% } %>
-          <% if(currentUser){ %>
+          <% if(res.locals.currentUser){ %>
           <a class="nav-link" href="/logout">Logout</a>
           <% } %>
         </div>
