--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -1,80 +1,80 @@
 <style>
   .btn-search{
-    background-color: #fe424d;
-    color: white;
-    border-radius:25px;
-    padding: 0 1rem 0 1rem
-  }
+background-color: #fe424d;
+color: white;
+border-radius:25px;
+padding: 0 1rem 0 1rem
+}
 
-  .btn-search:hover{
-    background-color: #fe424d;
-    color: white;
-  }
+.btn-search:hover{
+background-color: #fe424d;
+color: white;
+}
 
-  .btn-search i{
-    margin-right: 0.5px;
-  }
+.btn-search i{
+margin-right: 0.5px;
+}
 
-  .search-input{
-    border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 2rem;
-    font-size:0.9rem;
-  }
-
+.search-input{
+border-radius: 25px;
+padding: 0.5rem 3rem 0.5rem 2rem;
+font-size:0.9rem;
+}
 </style>
 
 
-
 <nav class="navbar navbar-expand-md  bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass searchIcon"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass searchIcon"></i></a>
 
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="/listings">Explore</a>
-          
-        </div>
+      <span class="navbar-toggler-icon"></span>
 
+    </button>
 
-        <div class="navbar-nav ms-auto">
-          <form class="d-flex" role="search">
-            <input 
-            class="form-control me-2 search-input" 
-            type="search" 
-            placeholder="Search Destination" 
-            aria-label="Search">
-  
-            <button 
-            class="btn btn-search" 
-            type="submit">
-           <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-  
-            
-          </form>
-        </div>
-        
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/listings/new">wanderlust home</a>
-          <% if(!res.locals.currentUser){ %>
-          <a class="nav-link" aria-current="page" href="/signup"><b>Signup</b></a>
-          <a class="nav-link" href="/login"><b>Login</b></a>
-          <% } %>
-          <% if(res.locals.currentUser){ %>
-          <a class="nav-link" href="/logout">Logout</a>
-          <% } %>
-        </div>
-
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
 
 
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input 
+          class="form-control me-2 search-input" 
+          type="search" 
+          placeholder="Search Destination" 
+          aria-label="Search">
 
+          <button 
+          class="btn btn-search" 
+          type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+
+          
+        </form>
+      </div>
+      
+
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="/listings">WanderLust Home</a>
+
+        <% if(!currentUser){ %>
+          <a class="nav-link" aria-current="page" href="/signup"><b>Signup</b></a>
+          <a class="nav-link" href="/login"><b>Login</b></a>
+        <% } %>
+
+        <% if(currentUser){ %>
+          <a class="nav-link" href="/logout">Logout</a>
+        <% } %>
+      </div>
 
     </div>
-  </nav>
+
+  </div>
+
+</nav>
