--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,7 +177,27 @@ body{
 }
 
 /* Navbar styling  */
+ .btn-search {
+     background-color: #fe424d;
+     color: white;
+     border-radius: 25px;
+     padding: 0 1rem 0 1rem
+ }
 
+ .btn-search:hover {
+     background-color: #fe424d;
+     color: white;
+ }
+
+ .btn-search i {
+     margin-right: 0.5px;
+ }
+
+ .search-input {
+     border-radius: 25px;
+     padding: 0.5rem 3rem 0.5rem 2rem;
+     font-size: 0.9rem;
+ }
 
 
 /*  */
