--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -39,12 +39,12 @@
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings">WanderLust Home</a>
 
-        <% if(!res.locals.currentUser){ %>
+        <% if(!currentUser){ %>
           <a class="nav-link" aria-current="page" href="/signup"><b>Signup</b></a>
           <a class="nav-link" href="/login"><b>Login</b></a>
         <% } %>
 
-        <% if(res.locals.currentUser){ %>
+        <% if(currentUser){ %>
           <a class="nav-link" href="/logout">Logout</a>
         <% } %>
       </div>
