--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -1,25 +1,25 @@
 <style>
 
 .btn-search {
-     background-color: #fe424d;
-     color: white;
-     border-radius: 25px;
-     padding: 0 1rem 0 1rem
+  background-color: #fe424d;
+  color: white;
+  border-radius: 25px;
+  padding: 0 1rem 0 1rem
 }
 
 .btn-search:hover {
-     background-color: #fe424d;
-     color: white;
+  background-color: #fe424d;
+  color: white;
 }
 
 .btn-search i {
-     margin-right: 0.5px;
+  margin-right: 0.5px;
 }
 
 .search-input {
-     border-radius: 25px;
-     padding: 0.5rem 3rem 0.5rem 2rem;
-     font-size: 0.9rem;
+  border-radius: 25px;
+  padding: 0.5rem 3rem 0.5rem 2rem;
+  font-size: 0.9rem;
 }
 
 
@@ -72,6 +72,7 @@
         <% } %>
 
         <% if(currentUser){ %>
+          <a class ="nav-link" href ="/listings/new">Create List</a>
           <a class="nav-link" href="/logout">Logout</a>
         <% } %>
       </div>
