--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -105,7 +105,7 @@
         </div>
     </div>
 <div class="row row-cols-lg-3 row-colg-md-2 row-cols-sm-1 mt-3">
-    <% for(let listing of printinglistings){ %>
+    <% for(let listing of printingListings){ %>
         <a href="listings/<%= listing.id %>" class="show-image">
              <div class="card col" >
                     <img src="<%= listing.img.url %>" class="card-img-top" alt="..." style="height: 20rem;">
