--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,9 +4,9 @@
 
 <script>
     
-  const   mapTokentop= "<%= process.env.MAP_TOKEN %>";
+  const   mapTokenTop= "<%= process.env.MAP_TOKEN %>";
 
-  const  listingstringify =  <%-JSON.stringify( selectedList )%> ;
+  const  listingStringify =  <%-JSON.stringify( selectedList )%> ;
 
   </script>
 
