--- a/views/listings/updateform.ejs
+++ b/views/listings/updateform.ejs
@@ -78,9 +78,68 @@
                 <div class="invalid-feedback">Please enter correct location</div>
     
             </div>
-    
-            
-            
+
+
+                    <div class="checkboxContainer"
+                        style="display: flex; justify-content: space-evenly; flex-wrap: wrap;align-items: center; margin-bottom: 20px; ">
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="trending" name="listings[category]"
+                                id="flexCheckChecked">
+                            <label class="form-check-label " for="flexCheckChecked">
+                                Trending
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="mountains" name="listings[category]"
+                                id="flexCheckDefault" />
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Mountains
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="farm" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Farm
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="snow" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Snow
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="camp" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Camp
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="pools" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Pools
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="rooms" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Rooms
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="iconic" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Iconic Cities
+                            </label>
+                        </div>
+                        <div class="form-check mb- 4">
+                            <input class="form-check-input" type="checkbox" value="castles" name="listings[category]" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Castles Near
+                            </label>
+                        </div>
+                    </div>
+
             <button class="btn btn-dark add-btn  mt-3">Update</button>
         </form>
         
