--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -22,13 +22,16 @@
   font-size: 0.9rem;
 }
 
+@media screen {
+  
+}
 
 </style>
 
 
-<nav class="navbar navbar-expand-md  bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md  bg-body-light  sticky-top absolute">
 
-  <div class="container-fluid">
+  <div class="container-fluid border-bottom  " style="margin-top: 10px; position:absolute; background-color:white ;">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass searchIcon"></i></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
