--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-
+<!-- 
 <% layout("/layouts/boilerplate") %>
 
 
@@ -158,4 +158,4 @@
     <br >
 </div>
 
-<script src="/js/map.js"></script>
+<script src="/js/map.js"></script> -->
