--- a/views/lincludes/navbar.ejs
+++ b/views/lincludes/navbar.ejs
@@ -1,33 +1,3 @@
-<style>
-
-.btn-search {
-  background-color: #fe424d;
-  color: white;
-  border-radius: 25px;
-  padding: 0 1rem 0 1rem
-}
-
-.btn-search:hover {
-  background-color: #fe424d;
-  color: white;
-}
-
-.btn-search i {
-  margin-right: 0.5px;
-}
-
-.search-input {
-  border-radius: 25px;
-  padding: 0.5rem 3rem 0.5rem 2rem;
-  font-size: 0.9rem;
-}
-
-@media screen {
-  
-}
-
-</style>
-
 
 <nav class="navbar navbar-expand-md  bg-body-light  sticky-top absolute">
 
@@ -45,37 +15,17 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
-
-
-      <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search" action="/listings/search" method="get" >
-          <input 
-          class="form-control me-2 search-input" 
-          type="search" 
-          placeholder="Search Destination" 
-          aria-label="Search"
-          name="place">
-
-          <button 
-          class="btn btn-search" 
-          type="submit">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-
-          
-        </form>
-      </div>
       
 
       <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings">WanderLust Home</a>
+        <a class="nav-link" href="/listings">Eva Home</a>
 
-        <% if(!currentUser){ %>
+        <% if(! locals.currentUser){ %>
           <a class="nav-link" aria-current="page" href="/signup"><b>Signup</b></a>
           <a class="nav-link" href="/login"><b>Login</b></a>
         <% } %>
 
-        <% if(currentUser){ %>
+        <% if(locals.currentUser){ %>
           <a class ="nav-link" href ="/listings/new">Create List</a>
           <a class="nav-link" href="/logout">Logout</a>
         <% } %>
