--- a/views/listings/form.ejs
+++ b/views/listings/form.ejs
@@ -1,4 +1,4 @@
-<% layout("layouts/boilerplate.ejs") %>
+<!-- <% layout("layouts/boilerplate.ejs") %>
 
     <div class="row">
         <div class="col-8 offset-2">
@@ -123,4 +123,4 @@
      </div>
 </div>
 <br>
-<br>
+<br> -->
