--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -35,7 +35,19 @@
                 placeholder="Unique Password" 
                 required >
                 <div class="valid-feedback">Looks good!!</div>
-            </div>         
+            </div>
+            
+            <div class="mb-4 ">
+                <label for="gender" class="form-label">gender</label>
+                <input type="text" name="gender" id="gender" class="form-control" placeholder="Unique Password" required>
+                <div class="valid-feedback">good!!</div>
+            </div>
+
+            <div class="mb-4 ">
+                <label for="phoneNo" class="form-label">phoneNo</label>
+                <input type="number" name="phoneNo" id="phoneNo" class="form-control" placeholder="Unique Password" required>
+                <div class="valid-feedback">Looks good!!</div>
+            </div>
 
             <button class="btn btn-success">SignUp</button>
 
